--- a/package.json
+++ b/package.json
@@ -1,14 +1,28 @@
 {
   "name": "react-futuristic-ui",
   "version": "1.0.0",
-  "main": "index.js",
   "repository": "git@github.com:bauerbene/react-futuristic-ui.git",
   "author": "Benedikt Bauer <benedikt.bauer@posteo.de>",
   "license": "MIT",
   "private": false,
+  "main": "dist/csj/index.js",
+  "module": "dist/esm/index.js",
+  "files": [
+    "dist"
+  ],
+  "types": "dist/index.d.ts",
   "dependencies": {
     "@types/react": "^18.0.8",
     "react": "^18.1.0",
     "typescript": "^4.6.4"
+  },
+  "devDependencies": {
+    "@rollup/plugin-commonjs": "^22.0.0",
+    "@rollup/plugin-node-resolve": "^13.2.1",
+    "@rollup/plugin-typescript": "^8.3.2",
+    "rollup-plugin-dts": "^4.2.1"
+  },
+  "scripts": {
+    "rollup": "rollup -c"
   }
 }
