--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "@rollup/plugin-commonjs": "^22.0.0",
     "@rollup/plugin-node-resolve": "^13.2.1",
     "@rollup/plugin-typescript": "^8.3.2",
-    "rollup-plugin-dts": "^4.2.1"
+    "rollup-plugin-dts": "^4.2.1",
+    "tslib": "^2.4.0"
   },
   "scripts": {
     "rollup": "rollup -c"
