--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
-  "name": "react-futuristic-ui",
+  "name": "@bauerbene/react-futuristic-ui",
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com/bauerbene"
+  },
   "version": "1.0.0",
   "repository": "git@github.com:bauerbene/react-futuristic-ui.git",
   "author": "Benedikt Bauer <benedikt.bauer@posteo.de>",
